2012-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #13576]
	* malloc/malloc.c (sYSMALLOc): Free the old top chunk with a
	multiple of MALLOC_ALIGNMENT in size.
	(_int_free): Check chunk size is a multiple of MALLOC_ALIGNMENT.

2012-05-24  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/stdio.h-data (BUFSIZ): Use macro-int-constant.
	Require >= 256.
	(FILENAME_MAX): Use macro-int-constant.
	(FOPEN_MAX): Use macro-int-constant.  Require >= 8.
	(_IOFBF): Use macro-int-constant.
	(_IOLBF): Likewise.
	(_IONBF): Likewise.
	(SEEK_CUR): Likewise.
	(SEEK_END): Likewise.
	(SEEK_SET): Likewise.
	(TMP_MAX): Likewise.
	(EOF): Use macro-int-constant.  Require < 0.
	(NULL): Use macro-constant.  Require == 0.
	(stdin): Require type to be FILE *.
	(stdout): Likewise.
	(stderr): Likewise.
	* conform/data/stdlib.h-data (EXIT_FAILURE): Use
	macro-int-constant.
	(EXIT_SUCCESS): Likewise.
	(NULL): Use macro-constant.  Require == 0.
	(RAND_MAX): Use macro-int-constant.
	[ISO99 || ISO11] (lldiv_t): Require also for these standards.
	[C99-based standards] (strtof): Require function.
	[C99-based standards] (strtold): Likewise.
	[C99-based standards] (strtoll): Likewise.
	[C99-based standards] (strtoull): Likewise.
	[ISO || ISO99 || ISO11] (stddef.h): Do not allow header.
	[ISO || ISO99 || ISO11] (limits.h): Likewise.
	[ISO || ISO99 || ISO11] (math.h): Likewise.
	[ISO || ISO99 || ISO11] (sys/wait.h): Likewise.
	(str*): Change to str[abcdefghijklmnopqrstuvwxyz]*.
	[ISO || ISO99 || ISO11] (*_t): Do not allow.

2012-05-24  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14132]
	* argp/argp-help.c (dgettext) [_LIBC]: Remove use of INTUSE.
	* argp/argp-parse.c (dgettext) [_LIBC]: Likewise.
	* intl/dgettext.c (DCGETTEXT): Likewise.
	* intl/gettext.c (DCGETTEXT): Likewise.
	* intl/l10nflist.c (__argz_count, __argz_stringify): Likewise.
	* posix/regex_internal.h (gettext): Likewise.
	* include/libintl.h (__dcgettext_internal, __dcngettext_internal):
	Remove declaration.